--- a/components/Header/Header.scss
+++ b/components/Header/Header.scss
@@ -7,8 +7,11 @@
 }
 
 .header__wrapper {
-  position: sticky;
+  position: fixed;
   top: 0;
+  left: 0;
+  right: 0;
+  width: 100%;
   z-index: 1000;
   transform: translateY(-100%);
   transition: transform 200ms ease;
